--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 body {
-  background-color: rgb(139, 139, 139);
   font-family: "Montserrat";
   height: 100%;
+}
+
+.testback {
+  background-image: linear-gradient(to right, #0e5c8f, #3cc9e9) !important;
 }
 
 .homepage {
@@ -128,7 +131,7 @@ a:visited {
 }
 
 #photogroup1 img {
-  border: 1px solid red;
+  border: 5px solid #b98c52;
   border-radius: 5px;
   width: 100%;
   height: 100%;
@@ -185,7 +188,7 @@ a:visited {
 }
 
 #photogroup2 img {
-  border: 1px solid red;
+  border: 5px solid #6a84a2;
   border-radius: 5px;
   width: 100%;
   height: 100%;
