--- a/styles/style.css
+++ b/styles/style.css
@@ -49,7 +49,7 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  background-color: rgb(44, 42, 42);
+  background-color: #89bdd3;
   width: 100%;
   height: 50px;
   z-index: 2;
@@ -131,7 +131,7 @@ a:visited {
 }
 
 #photogroup1 img {
-  border: 5px solid #b98c52;
+  border: 5px solid #c9c9c9;
   border-radius: 5px;
   width: 100%;
   height: 100%;
@@ -140,6 +140,7 @@ a:visited {
 
 .zionphotos img:hover {
   cursor: pointer;
+  border-color: #e3e3e3 !important;
 }
 
 .grid1 {
@@ -424,17 +425,88 @@ flex-grow: 3;
   }
 }
 
+/* lightgallery styling */
+
+.gallerytext p {
+  margin-top: 11vh;
+  text-align: center;
+  font-size: 1.55vw;
+}
+
 #gallery-container {
-  padding-top: 60px;
+  padding-top: 2vh;
   display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  /* padding: 80px 25px 50px 25px;  */
+}
+
+.galleryimg {
+  justify-self: center;
+  margin: 20px;
+  max-width: 296px;
+  width: 32vw;
 }
 
 .image-responsive {
-  max-width: 100%;
-  width: auto;
-  height: auto;
-  border-radius: 7px;
-  border: 2px blue solid;
-  margin: 8px 0 8px 0;
-  padding: 0;
+  border: 3px solid #ddd;
+  width: 100%;
+  border-radius: 4px;
+  -webkit-box-shadow: 5px 5px 24px -6px rgba(0, 0, 0, 0.73);
+  -moz-box-shadow: 5px 5px 24px -6px rgba(0, 0, 0, 0.73);
+  box-shadow: 5px 5px 24px -6px rgba(0, 0, 0, 0.73);
 }
+
+.image-responsive:hover {
+  border-color: #9ad3de;
+}
+
+@media only screen and (min-width: 1300px) {
+  #gallery-container {
+    max-height: 100vh;
+  }
+  .image-responsive {
+  }
+
+  .galleryimg {
+    margin: 20px 5vw 20px 5vw;
+  }
+  .gallerytext p {
+  }
+}
+
+/* #churchimg {
+  border: 5px pink solid;
+  grid-area: 1 / 1 / 2 / 5;
+}
+
+#lakeimg {
+  border: 5px pink solid;
+  grid-area: 3 / 2 / 4 / 4;
+}
+
+#zionimg {
+  border: 5px pink solid;
+  grid-area: 2 / 1 / 3 / 3;
+}
+
+#zion2img {
+  border: 5px pink solid;
+
+  grid-area: 3 / 1 / 4 / 2;
+}
+
+#zion3img {
+  border: 5px pink solid;
+  grid-area: 2 / 3 / 3 / 5;
+}
+
+#zion4img {
+  border: 5px pink solid;
+
+  grid-area: 3 / 4 / 4 / 5;
+  justify-self: center;
+} */
