--- a/styles/style.css
+++ b/styles/style.css
@@ -1,28 +1,50 @@
 body {
   font-family: "Montserrat";
-  height: 100%;
 }
 
 .testback {
   background-image: linear-gradient(to right, #0e5c8f, #3cc9e9) !important;
 }
 
+/* Homepage Background Styling */
+
 .homepage {
-  height: 100%;
+  padding: 0;
   margin: 0;
+  height: 100vh;
+  overflow: hidden;
 }
 
 .background {
-  background-image: url(../background.jpg);
-  height: 100%;
+  background-image: url(/img/bg.jpg);
   background-position: center;
+  background-attachment: scroll;
   background-repeat: no-repeat;
   background-size: cover;
-  margin-top: 50px;
+  height: 110vh;
+  margin: -1vw -4vw -4vw -4vw;
+  padding: 0;
+}
+
+@media screen and (max-width: 1500px) {
+  .background {
+    background-image: url(/img/bg-2080.jpg);
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .background {
+    background-image: url(/img/bg-1040.jpg);
+  }
+}
+
+@media screen and (min-width: 1400px) {
+  .background {
+    margin: -2.5vw -6.5vw -6.5vw -6.5vw;
+  }
 }
 
 .background h1 {
-  padding-top: 350px;
   color: rgb(255, 255, 255);
   text-align: center;
 }
@@ -44,6 +66,8 @@ body {
   transition: transform 1s;
   transform: translateY(200px);
 }
+
+/* Navbar Styling  */
 
 .navigation {
   position: fixed;
@@ -82,7 +106,7 @@ a:visited {
   background-color: rgba(155, 155, 155, 0.493);
 }
 
-/* Mobile Collapse Menu */
+/* Mobile Collapse Menu and Responsive Nav/Menu Rules */
 
 #mobilemenu {
   display: none;
@@ -92,8 +116,6 @@ a:visited {
 #mobilemenu:hover {
   cursor: pointer;
 }
-
-/* Responsive Rules */
 
 @media screen and (max-width: 800px) {
   .navigation li {
@@ -121,6 +143,8 @@ a:visited {
     font-size: 5vw;
   }
 }
+
+/* Zion Page Image Block 1 */
 
 #photogroup1 {
   display: grid;
@@ -178,7 +202,7 @@ a:visited {
   grid-row-end: 9;
 }
 
-/* Image Block 2 */
+/* Zion Page Image Block 2 */
 
 #photogroup2 {
   display: grid;
@@ -390,6 +414,7 @@ flex-grow: 3;
 
 /* The translate properties below should be modified
   so that the text is only visible when the panel is minimized. */
+
 .panel > *:first-child {
   transform: translateY(0);
 }
@@ -441,7 +466,6 @@ flex-grow: 3;
   justify-content: center;
   align-items: center;
   align-content: center;
-  /* padding: 80px 25px 50px 25px;  */
 }
 
 .galleryimg {
@@ -477,36 +501,3 @@ flex-grow: 3;
   .gallerytext p {
   }
 }
-
-/* #churchimg {
-  border: 5px pink solid;
-  grid-area: 1 / 1 / 2 / 5;
-}
-
-#lakeimg {
-  border: 5px pink solid;
-  grid-area: 3 / 2 / 4 / 4;
-}
-
-#zionimg {
-  border: 5px pink solid;
-  grid-area: 2 / 1 / 3 / 3;
-}
-
-#zion2img {
-  border: 5px pink solid;
-
-  grid-area: 3 / 1 / 4 / 2;
-}
-
-#zion3img {
-  border: 5px pink solid;
-  grid-area: 2 / 3 / 3 / 5;
-}
-
-#zion4img {
-  border: 5px pink solid;
-
-  grid-area: 3 / 4 / 4 / 5;
-  justify-self: center;
-} */
