--- a/styles/style.css
+++ b/styles/style.css
@@ -44,6 +44,47 @@ body {
   }
 }
 
+.backgroundtext {
+  text-align: center;
+  margin: 0 10vw 0 10vw;
+  padding-top: 68vh;
+  color: rgb(255, 255, 255);
+  font-size: 2vh;
+}
+
+.introtext {
+  -webkit-animation: focus-in-expand 1.6s cubic-bezier(0.25, 0.46, 0.45, 0.94)
+    both;
+  animation: focus-in-expand 1.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+}
+
+@-webkit-keyframes focus-in-expand {
+  0% {
+    letter-spacing: -0.5em;
+    -webkit-filter: blur(12px);
+    filter: blur(12px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-filter: blur(0px);
+    filter: blur(0px);
+    opacity: 1;
+  }
+}
+@keyframes focus-in-expand {
+  0% {
+    letter-spacing: -0.5em;
+    -webkit-filter: blur(12px);
+    filter: blur(12px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-filter: blur(0px);
+    filter: blur(0px);
+    opacity: 1;
+  }
+}
+/* 
 .background h1 {
   color: rgb(255, 255, 255);
   text-align: center;
@@ -60,22 +101,72 @@ body {
 .background p {
   text-align: center;
   color: rgb(255, 255, 255);
-}
+} */
 
-.transformtext {
+/* .transformtext {
   transition: transform 1s;
   transform: translateY(200px);
-}
+} */
 
 /* Navbar Styling  */
+
+/* exp */
+
+/* .navcontainer {
+  margin-top: 50px;
+  font-size: 2.5vh;
+  padding: 0px;
+  list-style: none;
+  background: #fff;
+  box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.1);
+  display: inline-block;
+  border-radius: 50px;
+  position: relative;
+}
+
+.navcontainer a {
+  text-decoration: none;
+  color: #777;
+  text-transform: uppercase;
+  padding: 10px 20px;
+  display: inline-block;
+  position: relative;
+  z-index: 1;
+  transition-duration: 0.6s;
+}
+
+.navcontainer a.active {
+  color: rgb(255, 15, 15);
+}
+.navcontainer a i {
+  margin-right: 5px;
+}
+.navcontainer .selector {
+  height: 100%;
+  display: inline-block;
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  z-index: 1;
+  border-radius: 50px;
+  transition-duration: 0.6s;
+  transition-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55);
+
+  background: #05abe0;
+  background: -moz-linear-gradient(45deg, #05abe0 0%, #8200f4 100%);
+  background: -webkit-linear-gradient(45deg, #05abe0 0%, #8200f4 100%);
+  background: linear-gradient(45deg, #05abe0 0%, #8200f4 100%);
+} */
+
+/* old nav */
 
 .navigation {
   position: fixed;
   top: 0;
   left: 0;
-  background-color: #89bdd3;
+  background-color: #a4b8c4;
   width: 100%;
-  height: 50px;
+  height: 2.5rem;
   z-index: 2;
 }
 
@@ -88,17 +179,23 @@ body {
   z-index: inherit;
 }
 
+.navigation li a {
+  /* border: 1px solid red; */
+  display: block;
+
+  padding: 0.5rem;
+}
+
 .navigation li {
-  border: 1px solid red;
+  /* border: 1px solid red; */
   list-style-type: none;
-  font-size: 24px;
-  padding: 10px;
+  font-size: 1.25rem;
   z-index: inherit;
 }
 
 .navigation li a:link,
 a:visited {
-  color: white;
+  color: #fcfafa;
   text-decoration: none;
 }
 
@@ -113,20 +210,29 @@ a:visited {
   color: white;
 }
 
-#mobilemenu:hover {
-  cursor: pointer;
-}
-
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 56em) {
+  /* navbar should be fixed botton to the right that expands div? */
   .navigation li {
     display: none;
+  }
+
+  .navigation {
+    display: block;
+    position: fixed;
+    right: 90%;
+    top: 0;
+    height: auto;
+    width: auto;
   }
 
   #mobilemenu {
     display: block;
     position: absolute;
-    right: 0;
     top: 0;
+    left: 0;
+    padding: 0.5em;
+    border-radius: 5px;
+    background-color: #a4b8c4;
   }
 
   .navigation ul {
@@ -136,11 +242,20 @@ a:visited {
 
   .navigation.expanded {
     height: auto;
+    width: 100%;
   }
 
   .navigation li.expanded {
     display: block;
     font-size: 5vw;
+    text-align: center;
+  }
+
+  .navigation li a {
+    display: block;
+  }
+  .navigation li a:hover {
+    display: block;
   }
 }
 
@@ -151,7 +266,7 @@ a:visited {
   grid-template-columns: repeat(8, 1fr);
   grid-template-rows: repeat(8, 5vw);
   grid-gap: 15px;
-  margin: 100px 25px 15px 25px;
+  margin: 4rem 25px 15px 25px;
 }
 
 #photogroup1 img {
@@ -218,6 +333,7 @@ a:visited {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  margin-bottom: 3vw;
 }
 
 .gridalt1 {
@@ -289,14 +405,13 @@ flex-grow: 3;
 
 /* Modal Content (Image) */
 .modal-content {
-  margin: auto;
+  margin: 3vh auto auto auto;
   display: block;
-  width: 70vw;
+  width: 74vw;
   max-width: 95vw;
   border-radius: 5px;
 }
 
-/* Add Animation - Zoom in the Modal */
 .modal-content,
 #caption {
   animation-name: zoom;
@@ -313,6 +428,7 @@ flex-grow: 3;
 }
 
 /* The Close Button */
+
 .modalclose {
   position: absolute;
   top: 55px;
@@ -331,10 +447,11 @@ flex-grow: 3;
 }
 
 /* 100% Image Width on Smaller Screens */
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 1200px) {
   .modal-content {
-    width: 100%;
-    padding-top: 100px;
+    margin: 5rem auto auto auto;
+    width: 90vw;
+    max-width: 95vw;
   }
 }
 
@@ -363,8 +480,6 @@ flex-grow: 3;
 }
 
 .panel {
-  background: #6b0f9c;
-  box-shadow: inset 0 0 0 5px rgba(255, 255, 255, 0.1);
   color: white;
   text-align: center;
   align-items: center;
@@ -372,7 +487,7 @@ flex-grow: 3;
   /* Chrome + FF transitionend event.propertyName === flex-grow */
   transition: font-size 0.7s cubic-bezier(0.61, -0.19, 0.7, -0.11),
     flex 0.7s cubic-bezier(0.61, -0.19, 0.7, -0.11), background 0.2s;
-  font-size: 20px;
+  font-size: 1.25em;
   background-size: cover;
   background-position: center;
   flex: 1;
@@ -383,22 +498,6 @@ flex-grow: 3;
 
 .panel:hover {
   cursor: pointer;
-}
-
-.panel1 {
-  background-image: url(../img/cpg/left.jpg);
-}
-.panel2 {
-  background-image: url(../img/cpg/leftmiddle.jpg);
-}
-.panel3 {
-  background-image: url(../img/cpg/center.jpg);
-}
-.panel4 {
-  background-image: url(../img/cpg/rightmiddle.jpg);
-}
-.panel5 {
-  background-image: url(../img/cpg/right.jpg);
 }
 
 /* Flex Items */
@@ -444,22 +543,176 @@ flex-grow: 3;
   font-size: 40px;
 }
 
+.panel1 {
+  background-image: url(../img/cpg/1k/left.jpg);
+}
+.panel2 {
+  background-image: url(../img/cpg/1k/leftmiddle.jpg);
+}
+.panel3 {
+  background-image: url(../img/cpg/1k/center.jpg);
+}
+.panel4 {
+  background-image: url(../img/cpg/1k/rightmiddle.jpg);
+}
+.panel5 {
+  background-image: url(../img/cpg/1k/right.jpg);
+}
+
 @media only screen and (max-width: 600px) {
   .panel p {
     font-size: 1em;
   }
 }
 
+/* filter by device height... */
+
+/* If height is between 1080 and 1440, use 1440
+Below 1024 of width, it's not really useful
+If width is below 1024?? then adjust for mobile? */
+
+@media only screen and (max-width: 60em) {
+  /* adjust panels for mobile here, maybe apply if height>width */
+  .panel > * {
+    margin: 0;
+    width: 100%;
+    transition: transform 0.5s;
+    flex: 1 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .panels {
+    min-height: 100vh;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .panel {
+    color: white;
+    text-align: center;
+    align-items: center;
+    /* Safari transitionend event.propertyName === flex */
+    /* Chrome + FF transitionend event.propertyName === flex-grow */
+    transition: font-size 0.7s cubic-bezier(0.61, -0.19, 0.7, -0.11),
+      flex 0.7s cubic-bezier(0.61, -0.19, 0.7, -0.11), background 0.2s;
+
+    background-size: cover;
+    background-position: center;
+    flex: 1;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .panel > *:first-child {
+    transform: translateX(0);
+  }
+  .panel.open-active > *:first-child {
+    transform: translateX(-100%);
+  }
+  .panel > *:last-child {
+    transform: translateX(100);
+  }
+  .panel.open-active > *:last-child {
+    transform: translateX(100%);
+  }
+}
+
+/* when width is smaller than 960, break by width? */
+/* when width is greater than 960, break by height */
+
+@media only screen and (max-height: 50em), (max-width: 50em) {
+  .panel1 {
+    background-image: url(../img/cpg/600/left.jpg);
+  }
+  .panel2 {
+    background-image: url(../img/cpg/600/leftmiddle.jpg);
+  }
+  .panel3 {
+    background-image: url(../img/cpg/600/center.jpg);
+  }
+  .panel4 {
+    background-image: url(../img/cpg/600/rightmiddle.jpg);
+  }
+  .panel5 {
+    background-image: url(../img/cpg/600/right.jpg);
+  }
+}
+
+@media only screen and (min-height: 55em), (min-width: 55em) {
+  .panel1 {
+    background-image: url(../img/cpg/1k/left.jpg);
+  }
+  .panel2 {
+    background-image: url(../img/cpg/1k/leftmiddle.jpg);
+  }
+  .panel3 {
+    background-image: url(../img/cpg/1k/center.jpg);
+  }
+  .panel4 {
+    background-image: url(../img/cpg/1k/rightmiddle.jpg);
+  }
+  .panel5 {
+    background-image: url(../img/cpg/1k/right.jpg);
+  }
+}
+
+@media only screen and (min-height: 75em), (min-width: 75em) {
+  .panel1 {
+    background-image: url(../img/cpg/1.5k/left.jpg);
+  }
+  .panel2 {
+    background-image: url(../img/cpg/1.5k/leftmiddle.jpg);
+  }
+  .panel3 {
+    background-image: url(../img/cpg/1.5k/center.jpg);
+  }
+  .panel4 {
+    background-image: url(../img/cpg/1.5k/rightmiddle.jpg);
+  }
+  .panel5 {
+    background-image: url(../img/cpg/1.5k/right.jpg);
+  }
+}
+
+@media only screen and (min-height: 1441px) {
+  .panel1 {
+    background-image: url(../img/cpg/2k/left.jpg);
+  }
+  .panel2 {
+    background-image: url(../img/cpg/2k/leftmiddle.jpg);
+  }
+  .panel3 {
+    background-image: url(../img/cpg/2k/center.jpg);
+  }
+  .panel4 {
+    background-image: url(../img/cpg/2k/rightmiddle.jpg);
+  }
+  .panel5 {
+    background-image: url(../img/cpg/2k/right.jpg);
+  }
+}
+
 /* lightgallery styling */
 
 .gallerytext p {
-  margin-top: 11vh;
+  margin: 12vh 0 0 0;
+  padding: 0 10vw 0 10vw;
   text-align: center;
-  font-size: 1.55vw;
+  font-size: 3vw;
+}
+
+@media only screen and (min-width: 1024px) {
+  .gallerytext p {
+    font-size: 2.5vw;
+  }
 }
 
 #gallery-container {
-  padding-top: 2vh;
+  padding: 2vh 0 0 0;
+  margin: 0;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
