--- a/styles/index.css
+++ b/styles/index.css
@@ -8,12 +8,10 @@
   height: 100vh;
   display: flex;
   flex-flow: column;
-
   color: white;
 
-  /* 
-    Webkit needed?
-  -webkit-animation: blend-shift 1.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) both; */
+  -webkit-animation: blend-shift 1.6s cubic-bezier(0.25, 0.46, 0.45, 0.94)
+    forwards;
   animation: blend-shift 1.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) forwards;
 }
 
@@ -75,7 +73,7 @@
   opacity: 0;
 
   mix-blend-mode: soft-light;
-  -webkit-animation: focus-in-expand 1.6s cubic-bezier(0.25, 0.46, 0.45, 0.94)
+  -webkit-animation: focus-in-expand 2.3s cubic-bezier(0.25, 0.46, 0.45, 0.94)
     forwards;
   animation: focus-in-expand 2.3s cubic-bezier(0.25, 0.46, 0.45, 0.94) forwards;
 }
