--- a/styles/style.css
+++ b/styles/style.css
@@ -6,9 +6,20 @@ body {
   margin: 0;
 }
 
-/* .testback {
-  background-image: linear-gradient(to right, #0e5c8f, #3cc9e9) !important;
-} */
+@media only screen and (max-width: 700px) {
+  body {
+    font-size: 0.8em;
+  }
+
+  .hero__nav a {
+    padding: 0.5em;
+    border-left: 1px solid #9e9e9e;
+  }
+
+  .hero__nav a:first-child {
+    border-left: none;
+  }
+}
 
 /* Global Navigation Styling */
 .hero__nav {
@@ -18,40 +29,8 @@ body {
   align-self: flex-start;
   margin-top: 2em;
   display: flex;
-}
-
-.hero__nav a:visited {
-  color: inherit;
-}
-
-.hero__nav a:hover {
-  transform: scale(1.05);
-  color: rgb(190, 190, 190);
-}
-
-.hero__nav a:active {
-  color: rgb(124, 124, 124);
-}
-
-.hero__nav--current {
-  border-bottom: 4px solid rgba(255, 255, 255, 0.651);
-}
-
-.hero__nav a {
-  text-decoration: none;
-  font-size: 1.25em;
-}
-
-.hero__nav--current {
-  border-bottom: 4px solid rgba(255, 255, 255, 0.651);
-}
-
-.github-icon {
-  color: white;
-}
-
-.hero_nav:visited {
-  text-decoration: none;
+  align-items: center;
+  text-align: center;
 }
 
 @keyframes nav-spread {
@@ -74,6 +53,37 @@ body {
   }
 }
 
+.hero__nav a:visited {
+  color: white;
+}
+
+.hero__nav a:hover {
+  transform: scale(1.05);
+  color: rgb(190, 190, 190);
+}
+
+.hero__nav a:active {
+  color: rgb(124, 124, 124);
+}
+
+.hero__nav--current {
+  border-bottom: 4px solid rgba(255, 255, 255, 0.651);
+}
+
+.hero__nav a {
+  text-decoration: none;
+  font-size: 1.25em;
+  transition: all 300ms ease;
+}
+
+.hero__nav--current {
+  border-bottom: 4px solid rgba(255, 255, 255, 0.651);
+}
+
+.github-icon {
+  color: white;
+}
+
 .hero__textContainer {
   margin: auto;
   text-decoration: none;
@@ -89,173 +99,6 @@ p {
   text-decoration: none;
   font-size: 1.25em;
   margin: 0.25em;
-}
-
-/* Homepage Background Styling */
-
-/* 
-.background h1 {
-  color: rgb(255, 255, 255);
-  text-align: center;
-}
-
-.background h1:hover {
-  cursor: pointer;
-}
-
-.background p:hover {
-  cursor: pointer;
-}
-
-.background p {
-  text-align: center;
-  color: rgb(255, 255, 255);
-} */
-
-/* .transformtext {
-  transition: transform 1s;
-  transform: translateY(200px);
-} */
-
-/* Navbar Styling  */
-
-/* exp */
-
-/* .navcontainer {
-  margin-top: 50px;
-  font-size: 2.5vh;
-  padding: 0px;
-  list-style: none;
-  background: #fff;
-  box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.1);
-  display: inline-block;
-  border-radius: 50px;
-  position: relative;
-}
-
-.navcontainer a {
-  text-decoration: none;
-  color: #777;
-  text-transform: uppercase;
-  padding: 10px 20px;
-  display: inline-block;
-  position: relative;
-  z-index: 1;
-  transition-duration: 0.6s;
-}
-
-.navcontainer a.active {
-  color: rgb(255, 15, 15);
-}
-.navcontainer a i {
-  margin-right: 5px;
-}
-.navcontainer .selector {
-  height: 100%;
-  display: inline-block;
-  position: absolute;
-  left: 0px;
-  top: 0px;
-  z-index: 1;
-  border-radius: 50px;
-  transition-duration: 0.6s;
-  transition-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55);
-
-  background: #05abe0;
-  background: -moz-linear-gradient(45deg, #05abe0 0%, #8200f4 100%);
-  background: -webkit-linear-gradient(45deg, #05abe0 0%, #8200f4 100%);
-  background: linear-gradient(45deg, #05abe0 0%, #8200f4 100%);
-} */
-
-/* old nav */
-
-.navigation {
-  position: fixed;
-  top: 0;
-  left: 0;
-  background-color: #a4b8c4;
-  width: 100%;
-  height: 2.5rem;
-  z-index: 2;
-}
-
-.navigation ul {
-  display: flex;
-  flex: 1;
-  justify-content: flex-end;
-  align-items: center;
-  margin: 0;
-  z-index: inherit;
-}
-
-.navigation li a {
-  /* border: 1px solid red; */
-  display: block;
-
-  padding: 0.5rem;
-}
-
-.navigation li {
-  /* border: 1px solid red; */
-  list-style-type: none;
-  font-size: 1.25rem;
-  z-index: inherit;
-}
-
-.navigation li a:link,
-a:visited {
-  color: #fcfafa;
-  text-decoration: none;
-}
-
-.navigation li:hover {
-  background-color: rgba(155, 155, 155, 0.493);
-}
-
-/* Mobile Collapse Menu and Responsive Nav/Menu Rules */
-
-#mobilemenu {
-  display: none;
-  color: white;
-}
-
-@media screen and (max-width: 56em) {
-  /* navbar should be fixed botton to the right that expands div? */
-  .navigation li {
-    display: none;
-  }
-
-  .navigation {
-    display: block;
-    position: fixed;
-    right: 90%;
-    top: 0;
-    height: auto;
-    width: auto;
-  }
-
-  .navigation ul {
-    display: block;
-    padding: 0;
-  }
-
-  .navigation.expanded {
-    height: auto;
-    width: 100%;
-  }
-
-  .navigation li.expanded {
-    display: block;
-    font-size: 5vw;
-    text-align: center;
-  }
-
-  .navigation li a {
-    display: block;
-  }
-  .navigation li a:hover {
-    display: block;
-  }
 }
 
 /* Cecret lake panel styling */
