--- a/styles/index.css
+++ b/styles/index.css
@@ -1,6 +1,7 @@
 .background {
-  background: linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6)),
-    url(../img/bg.jpg);
+  background: linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6));
+
+  /* url(../img/bg.jpg); */
   background-position: center;
   background-attachment: scroll;
   background-repeat: no-repeat;
