--- a/styles/zion.css
+++ b/styles/zion.css
@@ -55,7 +55,7 @@ body {
   display: flex;
   flex-flow: column;
   background: linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6)),
-    url("/img/znppg/z2.jpg");
+    url(/img/znppg/z2.jpg);
   background-size: cover;
   background-position: 60% 90%;
   background-repeat: no-repeat;
