--- a/styles/index.css
+++ b/styles/index.css
@@ -1,7 +1,6 @@
 .background {
-  background: linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6));
-
-  /* url(../img/bg.jpg); */
+  background: linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6)),
+    url(../img/bg.jpg);
   background-position: center;
   background-attachment: scroll;
   background-repeat: no-repeat;
@@ -68,6 +67,7 @@
 
 .hero__nav--current {
   border-bottom: 4px solid rgba(255, 255, 255, 0.651);
+  color: white;
 }
 
 .hero__nav a {
@@ -109,8 +109,8 @@
   font-size: 4rem;
   font-weight: 700;
   letter-spacing: -1.25rem;
-  -webkit-filter: blur(12px);
-  filter: blur(12px);
+  /* -webkit-filter: blur(12px);
+  filter: blur(12px); */
   opacity: 0;
   mix-blend-mode: soft-light;
   -webkit-animation: focus-in-expand 2.3s cubic-bezier(0.25, 0.46, 0.45, 0.94)
@@ -118,7 +118,7 @@
   animation: focus-in-expand 2.3s cubic-bezier(0.25, 0.46, 0.45, 0.94) forwards;
 }
 
-@-webkit-keyframes focus-in-expand {
+/* @-webkit-keyframes focus-in-expand {
   0% {
     letter-spacing: -0.5em;
     -webkit-filter: blur(12px);
@@ -130,7 +130,7 @@
     filter: blur(0px);
     opacity: 1;
   }
-}
+} */
 
 /* @keyframes focus-in-expand {
   0% {
@@ -153,21 +153,17 @@
 @keyframes focus-in-expand {
   0% {
     font-size: 4rem;
-    -webkit-filter: blur(12px);
-    filter: blur(12px);
+    /* -webkit-filter: blur(12px);
+    filter: blur(12px); */
     opacity: 0;
-    mix-blend-mode: soft-light;
-  }
-
-  50% {
     mix-blend-mode: soft-light;
   }
 
   100% {
     font-size: 7rem;
     letter-spacing: -0.5rem;
-    -webkit-filter: blur(0px);
-    filter: blur(0px);
+    /* -webkit-filter: blur(0px);
+    filter: blur(0px); */
     opacity: 1;
     mix-blend-mode: screen;
   }
