--- a/styles/zion.css
+++ b/styles/zion.css
@@ -48,6 +48,7 @@ body {
 
 .zion-nav-current {
   border-bottom: 4px solid rgba(255, 255, 255, 0.651);
+  color: white;
 }
 
 .hero-wrapper {
@@ -55,7 +56,7 @@ body {
   display: flex;
   flex-flow: column;
   background: linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6)),
-    url(/img/znppg/z2.jpg);
+    url(../img/znppg/z2.jpg);
   background-size: cover;
   background-position: 60% 90%;
   background-repeat: no-repeat;
