--- a/styles/cecret.css
+++ b/styles/cecret.css
@@ -1,15 +1,14 @@
-/* nav {
-  background: linear-gradient(rgb(37, 37, 37), rgb(112, 111, 111));
+/* Navigation Styling */
+.lake-nav {
+  background: linear-gradient(
+    rgba(37, 37, 37, 0.774),
+    rgba(112, 111, 111, 0.63)
+  );
+  justify-content: space-evenly;
   position: fixed;
   top: 0;
-  left: 0;
+  width: 100%;
   z-index: 1;
-} */
-
-/* Global Navigation Styling */
-.lake-nav {
-  background: linear-gradient(rgb(37, 37, 37), rgb(112, 111, 111));
-  justify-content: space-evenly;
   align-self: flex-start;
   display: flex;
   align-items: center;
@@ -37,20 +36,26 @@
 .lake-nav a {
   text-decoration: none;
   font-size: 1.25em;
-  transform: translateY(-1000px);
-  /* transition: all 300ms ease; */
-  -webkit-animation: nav-shift-down 600ms cubic-bezier(0.25, 0.46, 0.45, 0.94)
+  opacity: 0;
+  transition: all 300ms ease;
+  -webkit-animation: nav-ease-in 800ms cubic-bezier(0.25, 0.46, 0.45, 0.94)
     forwards;
-  animation: nav-shift-down 600ms cubic-bezier(0.25, 0.46, 0.45, 0.94) forwards;
+  animation: nav-ease-in 800ms cubic-bezier(0.25, 0.46, 0.45, 0.94) forwards;
 }
 
-@keyframes nav-shift-down {
+@keyframes nav-ease-in {
   from {
-    transform: translateY(-1000px);
+    opacity: 0;
   }
 
   to {
-    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .lake-nav a {
+    font-size: 1em;
   }
 }
 
