--- a/styles/misc.css
+++ b/styles/misc.css
@@ -17,7 +17,7 @@ html {
 
 .misc-nav a:hover {
   transform: scale(1.05);
-  color: rgb(190, 190, 190);
+  color: rgb(131, 131, 131);
 }
 
 .misc-nav a:active {
@@ -25,27 +25,33 @@ html {
 }
 
 .misc-nav-current {
-  border-bottom: 4px solid rgba(255, 255, 255, 0.651);
+  border-bottom: 4px solid rgba(0, 0, 0, 0.651);
 }
 
 .misc-nav a {
   color: black;
   text-decoration: none;
   font-size: 1.25em;
-  transform: translateY(-1000px);
-  /* transition: all 300ms ease; */
-  -webkit-animation: nav-shift-down 600ms cubic-bezier(0.25, 0.46, 0.45, 0.94)
+  opacity: 0;
+  transition: all 300ms ease;
+  -webkit-animation: nav-ease-in 800ms cubic-bezier(0.25, 0.46, 0.45, 0.94)
     forwards;
-  animation: nav-shift-down 600ms cubic-bezier(0.25, 0.46, 0.45, 0.94) forwards;
+  animation: nav-ease-in 800ms cubic-bezier(0.25, 0.46, 0.45, 0.94) forwards;
 }
 
-@keyframes nav-shift-down {
+@keyframes nav-ease-in {
   from {
-    transform: translateY(-1000px);
+    opacity: 0;
   }
 
   to {
-    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .misc-nav a {
+    font-size: 1em;
   }
 }
 
