--- a/styles/index.css
+++ b/styles/index.css
@@ -64,8 +64,8 @@
   flex-flow: column;
   filter: brightness(20%);
   background-blend-mode: multiply;
-  -webkit-animation: brightness-increase 3s ease forwards;
-  animation: brightness-increase 3s ease forwards;
+  -webkit-animation: brightness-increase 2s ease forwards 500ms;
+  animation: brightness-increase 2s ease forwards 500ms;
 }
 
 @keyframes brightness-increase {
@@ -108,28 +108,28 @@
   letter-spacing: -0.5rem;
   opacity: 0;
   mix-blend-mode: soft-light;
-  -webkit-animation: focus-in-expand 2.7s cubic-bezier(0.25, 0.46, 0.45, 0.94)
+  -webkit-animation: focus-in-expand 2.2s cubic-bezier(0.25, 0.46, 0.45, 0.94)
+    1s forwards;
+  animation: focus-in-expand 2.2s cubic-bezier(0.25, 0.46, 0.45, 0.94) 1s
     forwards;
-  animation: focus-in-expand 2.7s cubic-bezier(0.25, 0.46, 0.45, 0.94) forwards;
 }
 
-/* @keyframes focus-in-expand {
-  0% {
-    letter-spacing: -0.5em;
-    -webkit-filter: blur(12px);
-    filter: blur(12px);
+.home-content-wrapper p {
+  opacity: 0;
+  -webkit-animation: paragraph-fade-in 300ms
+    cubic-bezier(0.25, 0.46, 0.45, 0.94) 3s forwards;
+  animation: paragraph-fade-in 300ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 3s
+    forwards;
+}
+
+@keyframes paragraph-fade-in {
+  from {
     opacity: 0;
-    color: rgb(231, 33, 33);
   }
-  100% {
-    -webkit-filter: blur(0px);
-    letter-spacing: 0.25em;
-    filter: blur(0px);
+  to {
     opacity: 1;
-    transform: translateY(100px);
-    color: rgb(48, 66, 226);
   }
-} */
+}
 
 @-webkit-keyframes focus-in-expand {
   0% {
