--- a/styles/cecret.css
+++ b/styles/cecret.css
@@ -1,16 +1,36 @@
+/* prefixed by https://autoprefixer.github.io (PostCSS: v7.0.26, autoprefixer: v9.7.3) */
+
 /* Navigation Styling */
 .lake-nav {
+  background: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    from(rgba(37, 37, 37, 0.774)),
+    to(rgba(112, 111, 111, 0.63))
+  );
+  background: -o-linear-gradient(
+    rgba(37, 37, 37, 0.774),
+    rgba(112, 111, 111, 0.63)
+  );
   background: linear-gradient(
     rgba(37, 37, 37, 0.774),
     rgba(112, 111, 111, 0.63)
   );
+  -webkit-box-pack: space-evenly;
+  -ms-flex-pack: space-evenly;
   justify-content: space-evenly;
   position: fixed;
   top: 0;
   width: 100%;
   z-index: 1;
+  -ms-flex-item-align: start;
   align-self: flex-start;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   text-align: center;
   padding: 0.5em;
@@ -21,6 +41,8 @@
 }
 
 .lake-nav a:hover {
+  -webkit-transform: scale(1.05);
+  -ms-transform: scale(1.05);
   transform: scale(1.05);
   color: rgb(190, 190, 190);
 }
@@ -31,16 +53,29 @@
 
 .lake-nav-current {
   border-bottom: 4px solid rgba(255, 255, 255, 0.651);
+  color: white;
 }
 
 .lake-nav a {
   text-decoration: none;
   font-size: 1.25em;
   opacity: 0;
+  -webkit-transition: all 300ms ease;
+  -o-transition: all 300ms ease;
   transition: all 300ms ease;
   -webkit-animation: nav-ease-in 800ms cubic-bezier(0.25, 0.46, 0.45, 0.94)
     forwards;
   animation: nav-ease-in 800ms cubic-bezier(0.25, 0.46, 0.45, 0.94) forwards;
+}
+
+@-webkit-keyframes nav-ease-in {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
 }
 
 @keyframes nav-ease-in {
@@ -70,29 +105,53 @@
 *,
 *:before,
 *:after {
+  -webkit-box-sizing: inherit;
   box-sizing: inherit;
 }
 
 .panels {
   min-height: 100vh;
   overflow: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
 .panel {
   color: white;
   text-align: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   /* Safari transitionend event.propertyName === flex */
   /* Chrome + FF transitionend event.propertyName === flex-grow */
+  -webkit-transition: font-size 0.7s cubic-bezier(0.61, -0.19, 0.7, -0.11),
+    background 0.2s, -webkit-box-flex 0.7s cubic-bezier(0.61, -0.19, 0.7, -0.11);
+  transition: font-size 0.7s cubic-bezier(0.61, -0.19, 0.7, -0.11),
+    background 0.2s, -webkit-box-flex 0.7s cubic-bezier(0.61, -0.19, 0.7, -0.11);
+  -o-transition: font-size 0.7s cubic-bezier(0.61, -0.19, 0.7, -0.11),
+    flex 0.7s cubic-bezier(0.61, -0.19, 0.7, -0.11), background 0.2s;
   transition: font-size 0.7s cubic-bezier(0.61, -0.19, 0.7, -0.11),
     flex 0.7s cubic-bezier(0.61, -0.19, 0.7, -0.11), background 0.2s;
+  transition: font-size 0.7s cubic-bezier(0.61, -0.19, 0.7, -0.11),
+    flex 0.7s cubic-bezier(0.61, -0.19, 0.7, -0.11), background 0.2s,
+    -webkit-box-flex 0.7s cubic-bezier(0.61, -0.19, 0.7, -0.11),
+    -ms-flex 0.7s cubic-bezier(0.61, -0.19, 0.7, -0.11);
   font-size: 1.25em;
   background-size: cover;
   background-position: center;
+  -webkit-box-flex: 1;
+  -ms-flex: 1;
   flex: 1;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
 }
 
@@ -104,10 +163,22 @@
 .panel > * {
   margin: 0;
   width: 100%;
+  -webkit-transition: -webkit-transform 0.5s;
+  transition: -webkit-transform 0.5s;
+  -o-transition: transform 0.5s;
   transition: transform 0.5s;
+  transition: transform 0.5s, -webkit-transform 0.5s;
+  -webkit-box-flex: 1;
+  -ms-flex: 1 0 auto;
   flex: 1 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
 }
 
@@ -115,15 +186,23 @@
     so that the text is only visible when the panel is minimized. */
 
 .panel > *:first-child {
+  -webkit-transform: translateY(0);
+  -ms-transform: translateY(0);
   transform: translateY(0);
 }
 .panel.open-active > *:first-child {
+  -webkit-transform: translateY(-100%);
+  -ms-transform: translateY(-100%);
   transform: translateY(-100%);
 }
 .panel > *:last-child {
+  -webkit-transform: translateY(100);
+  -ms-transform: translateY(100);
   transform: translateY(100);
 }
 .panel.open-active > *:last-child {
+  -webkit-transform: translateY(100%);
+  -ms-transform: translateY(100%);
   transform: translateY(100%);
 }
 
@@ -139,6 +218,8 @@
 }
 
 .panel.open {
+  -webkit-box-flex: 5;
+  -ms-flex: 5;
   flex: 5;
   font-size: 40px;
 }
@@ -176,46 +257,94 @@
   .panel > * {
     margin: 0;
     width: 100%;
+    -webkit-transition: -webkit-transform 0.5s;
+    transition: -webkit-transform 0.5s;
+    -o-transition: transform 0.5s;
     transition: transform 0.5s;
+    transition: transform 0.5s, -webkit-transform 0.5s;
+    -webkit-box-flex: 1;
+    -ms-flex: 1 0 auto;
     flex: 1 0 auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
   }
   .panels {
     min-height: 100vh;
     overflow: hidden;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
   }
 
   .panel {
     color: white;
     text-align: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     /* Safari transitionend event.propertyName === flex */
     /* Chrome + FF transitionend event.propertyName === flex-grow */
+    -webkit-transition: font-size 0.7s cubic-bezier(0.61, -0.19, 0.7, -0.11),
+      background 0.2s,
+      -webkit-box-flex 0.7s cubic-bezier(0.61, -0.19, 0.7, -0.11);
+    transition: font-size 0.7s cubic-bezier(0.61, -0.19, 0.7, -0.11),
+      background 0.2s,
+      -webkit-box-flex 0.7s cubic-bezier(0.61, -0.19, 0.7, -0.11);
+    -o-transition: font-size 0.7s cubic-bezier(0.61, -0.19, 0.7, -0.11),
+      flex 0.7s cubic-bezier(0.61, -0.19, 0.7, -0.11), background 0.2s;
     transition: font-size 0.7s cubic-bezier(0.61, -0.19, 0.7, -0.11),
       flex 0.7s cubic-bezier(0.61, -0.19, 0.7, -0.11), background 0.2s;
+    transition: font-size 0.7s cubic-bezier(0.61, -0.19, 0.7, -0.11),
+      flex 0.7s cubic-bezier(0.61, -0.19, 0.7, -0.11), background 0.2s,
+      -webkit-box-flex 0.7s cubic-bezier(0.61, -0.19, 0.7, -0.11),
+      -ms-flex 0.7s cubic-bezier(0.61, -0.19, 0.7, -0.11);
 
     background-size: cover;
     background-position: center;
+    -webkit-box-flex: 1;
+    -ms-flex: 1;
     flex: 1;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
   }
 
   .panel > *:first-child {
+    -webkit-transform: translateX(0);
+    -ms-transform: translateX(0);
     transform: translateX(0);
   }
   .panel.open-active > *:first-child {
+    -webkit-transform: translateX(-100%);
+    -ms-transform: translateX(-100%);
     transform: translateX(-100%);
   }
   .panel > *:last-child {
+    -webkit-transform: translateX(100);
+    -ms-transform: translateX(100);
     transform: translateX(100);
   }
   .panel.open-active > *:last-child {
+    -webkit-transform: translateX(100%);
+    -ms-transform: translateX(100%);
     transform: translateX(100%);
   }
 }
