--- a/styles/index.css
+++ b/styles/index.css
@@ -1,13 +1,34 @@
+/* prefixed by https://autoprefixer.github.io (PostCSS: v7.0.26, autoprefixer: v9.7.3) */
+
 /* Navigation Styling */
 .home-nav {
   -webkit-animation: nav-spread 1.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
   animation: nav-spread 1.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+  -webkit-box-pack: space-evenly;
+  -ms-flex-pack: space-evenly;
   justify-content: space-evenly;
+  -ms-flex-item-align: start;
   align-self: flex-start;
   padding-top: 0.5em;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   text-align: center;
+}
+
+@-webkit-keyframes nav-spread {
+  0% {
+    width: 50%;
+    opacity: 0.5;
+  }
+
+  100% {
+    width: 100%;
+    opacity: 1;
+  }
 }
 
 @keyframes nav-spread {
@@ -27,6 +48,8 @@
 }
 
 .home-nav a:hover {
+  -webkit-transform: scale(1.05);
+  -ms-transform: scale(1.05);
   transform: scale(1.05);
   color: rgb(190, 190, 190);
 }
@@ -43,6 +66,8 @@
 .home-nav a {
   text-decoration: none;
   font-size: 1.25em;
+  -webkit-transition: all 300ms ease;
+  -o-transition: all 300ms ease;
   transition: all 300ms ease;
 }
 
@@ -54,31 +79,44 @@
 
 /* Hero Background/Master Container Styling */
 .home-background-wrapper {
+  background: -webkit-gradient(
+      linear,
+      left bottom,
+      left top,
+      from(rgba(0, 0, 0, 0)),
+      to(rgba(0, 0, 0, 0.6))
+    ),
+    url(../img/bg.jpg), rgb(36, 104, 250);
+  background: -o-linear-gradient(bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6)),
+    url(../img/bg.jpg), rgb(36, 104, 250);
   background: linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6)),
     url(../img/bg.jpg), rgb(36, 104, 250);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-flow: column;
   flex-flow: column;
-  filter: brightness(20%);
   background-blend-mode: multiply;
-  -webkit-animation: brightness-increase 2s ease forwards 500ms;
-  animation: brightness-increase 2s ease forwards 500ms;
-}
-
-@keyframes brightness-increase {
-  from {
-    filter: brightness(20%);
-  }
-  to {
-    filter: none;
-  }
 }
 
 @media screen and (max-width: 1500px) {
   .background {
+    background: -webkit-gradient(
+        linear,
+        left bottom,
+        left top,
+        from(rgba(0, 0, 0, 0)),
+        to(rgba(0, 0, 0, 0.6))
+      ),
+      url(../img/bg-2080.jpg);
+    background: -o-linear-gradient(bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6)),
+      url(../img/bg-2080.jpg);
     background: linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6)),
       url(../img/bg-2080.jpg);
     background-position: center;
@@ -87,6 +125,16 @@
 
 @media screen and (max-width: 800px) {
   .home-background-wrapper {
+    background: -webkit-gradient(
+        linear,
+        left bottom,
+        left top,
+        from(rgba(0, 0, 0, 0)),
+        to(rgba(0, 0, 0, 0.6))
+      ),
+      url(../img/bg-1040.jpg), rgb(36, 104, 250);
+    background: -o-linear-gradient(bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6)),
+      url(../img/bg-1040.jpg), rgb(36, 104, 250);
     background: linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6)),
       url(../img/bg-1040.jpg), rgb(36, 104, 250);
     background-position: center;
@@ -94,6 +142,8 @@
 }
 
 .home-content-wrapper {
+  -webkit-box-flex: 1;
+  -ms-flex: 1;
   flex: 1;
   text-align: center;
   padding-top: 3em;
@@ -103,13 +153,17 @@
 
 .home-content-wrapper h1 {
   font-size: 6.5rem;
+  -webkit-transform: scale(0);
+  -ms-transform: scale(0);
   transform: scale(0);
   font-weight: 700;
   letter-spacing: -0.5rem;
   opacity: 0;
   mix-blend-mode: soft-light;
+
   -webkit-animation: focus-in-expand 2.2s cubic-bezier(0.25, 0.46, 0.45, 0.94)
     1s forwards;
+
   animation: focus-in-expand 2.2s cubic-bezier(0.25, 0.46, 0.45, 0.94) 1s
     forwards;
 }
@@ -118,8 +172,18 @@
   opacity: 0;
   -webkit-animation: paragraph-fade-in 300ms
     cubic-bezier(0.25, 0.46, 0.45, 0.94) 3s forwards;
+
   animation: paragraph-fade-in 300ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 3s
     forwards;
+}
+
+@-webkit-keyframes paragraph-fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 @keyframes paragraph-fade-in {
@@ -133,11 +197,14 @@
 
 @-webkit-keyframes focus-in-expand {
   0% {
+    -webkit-transform: scale(0.5);
     transform: scale(0.5);
     opacity: 0;
     mix-blend-mode: soft-light;
   }
+
   100% {
+    -webkit-transform: scale(1);
     transform: scale(1);
     opacity: 1;
     mix-blend-mode: screen;
@@ -146,12 +213,14 @@
 
 @keyframes focus-in-expand {
   0% {
+    -webkit-transform: scale(0.5);
     transform: scale(0.5);
     opacity: 0;
     mix-blend-mode: soft-light;
   }
 
   100% {
+    -webkit-transform: scale(1);
     transform: scale(1);
     opacity: 1;
     mix-blend-mode: screen;
