--- a/styles/zion.css
+++ b/styles/zion.css
@@ -190,6 +190,10 @@ body {
   margin-bottom: 2em;
 }
 
+.hero-buttonwrapper a:visited {
+  text-decoration: none;
+}
+
 .hero-buttonwrapper a {
   text-decoration: none;
 }
@@ -731,7 +735,7 @@ body {
   margin: auto;
   display: block;
   width: 74vw;
-  max-width: 95vw;
+  max-width: 85vw;
   border-radius: 5px;
   -webkit-animation: zoom 0.6s ease forwards;
   animation: zoom 0.6s ease forwards;
