Modal Margin adjustments

--- a/styles/zion.css
+++ b/styles/zion.css
@@ -720,7 +720,6 @@ body {
   display: none;
   position: fixed;
   z-index: 1;
-  padding-top: 100px;
   left: 0;
   top: 0;
   width: 100%;
@@ -732,8 +731,7 @@ body {
 
 /* Modal Image Styling */
 .modal-content {
-  margin: auto;
-  margin-bottom: 1em;
+  margin: 2.5em auto;
   display: block;
   width: 74vw;
   max-width: 85vw;
